# sops-gitops-github-action

./: Cargo.toml  Dockerfile  LICENSE.md  README.md  action.yml  sonar-project.properties
.github/workflows/: audit.yml  ci.yml  coverage.yml  dependabot.yml  scan.yml  security.yml
examples/: re-encrypt-secrets.yml
scripts/: entrypoint.sh
src/: lib.rs  main.rs
templates/: .sops.yaml
tests/: mock-public.key.asc  tests.rs
