[package]
name = "sops-gitops-github-action"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
process_control = "5.0.0"
base64 = "0.22.1"
glob = "0.3.0"
