[package]
name = "sops-gitops-github-action"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sops-gitops-github-action"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
process_control = "5.0.0"
base64 = "0.22.1"
glob = "0.3.0"
tempfile = "3.13.0"
dotenvy = "0.15.7"
pgp = "0.14.2"
#gpgme = "0.11.0"
sequoia-openpgp = "1.22.0"
